# COMP_426_Game_Of_Life

./: .gitignore  README.md
Assignment_Four/: CMakeLists.txt
Assignment_Four/kernels/: CheckArray.cl  ColorMapping.cl
Assignment_Four/src/: A4_Driver.cpp
Assignment_One/: CMakeLists.txt
Assignment_One/src/: A1_Driver.cpp  testNeighbor.cpp
Assignment_Three/: CMakeLists.txt
Assignment_Three/kernels/: ColorMapping.cl
Assignment_Three/src/: A3_Driver.cpp
Assignment_Two/: CMakeLists.txt
Assignment_Two/include/: CheckArray.h  ColorMapping.h
Assignment_Two/src/: A2_Driver_Main.cpp  CheckArray.cpp  ColorMapping.cpp
dependencies/: glad.c
dependencies/include/glad/: glad.h
